--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,10 +61,12 @@
     <Compile Include="Assets\scripts\player\charAnim.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\counter.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\settings\inputControl.cs" />
     <Compile Include="Assets\scripts\input.cs" />
+    <Compile Include="Assets\scripts\interactable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\_Assets\KitchenChaos_COMPLETE_PROJECT.txt" />
