--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,16 +58,18 @@
     <Analyzer Include="D:\Program Files\UnityEditor\Unity 2022.2.7f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
-    <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
-    <Compile Include="Assets\counter.cs" />
+    <Compile Include="Assets\scripts\owner.cs" />
+    <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
+    <Compile Include="Assets\scripts\interactables\interactable.cs" />
+    <Compile Include="Assets\scripts\mgrs\input.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
-    <Compile Include="Assets\gameMgr.cs" />
+    <Compile Include="Assets\item.cs" />
+    <Compile Include="Assets\scripts\scriptables\receipt.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\settings\inputControl.cs" />
-    <Compile Include="Assets\scripts\input.cs" />
-    <Compile Include="Assets\scripts\interactable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\_Assets\KitchenChaos_COMPLETE_PROJECT.txt" />
