--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
     <Analyzer Include="D:\Program Files\UnityEditor\Unity 2022.2.7f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Assets\item.cs" />
     <Compile Include="Assets\scripts\scriptables\receipt.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
+    <Compile Include="Assets\container.cs" />
     <Compile Include="Assets\scripts\settings\inputControl.cs" />
   </ItemGroup>
   <ItemGroup>
