--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,13 +60,18 @@
   <ItemGroup>
     <Compile Include="Assets\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
+    <Compile Include="Assets\functionalCounter.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
     <Compile Include="Assets\scripts\owner.cs" />
     <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
+    <Compile Include="Assets\progressBar.cs" />
+    <Compile Include="Assets\scripts\scriptables\receiptCnf.cs" />
+    <Compile Include="Assets\scripts\interactables\processable.cs" />
     <Compile Include="Assets\scripts\mgrs\input.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
+    <Compile Include="Assets\cuttingCounter.cs" />
     <Compile Include="Assets\item.cs" />
     <Compile Include="Assets\scripts\scriptables\receipt.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
