--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,28 +58,27 @@
     <Analyzer Include="D:\Program Files\UnityEditor\Unity 2022.2.7f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\counterAnim.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\functionalCounter.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
-    <Compile Include="Assets\functionalCounter.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
-    <Compile Include="Assets\trashCan.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
-    <Compile Include="Assets\scripts\scriptables\receiptCnf2.cs" />
-    <Compile Include="Assets\scripts\owner.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\counterAnim.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\cuttingCounter.cs" />
+    <Compile Include="Assets\scripts\utils\owner.cs" />
     <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
-    <Compile Include="Assets\progressBar.cs" />
     <Compile Include="Assets\scripts\scriptables\receiptCnf.cs" />
     <Compile Include="Assets\scripts\interactables\processable.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\heatPanCounter.cs" />
     <Compile Include="Assets\scripts\mgrs\input.cs" />
+    <Compile Include="Assets\scripts\interactables\item.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
-    <Compile Include="Assets\cuttingCounter.cs" />
-    <Compile Include="Assets\item.cs" />
     <Compile Include="Assets\scripts\scriptables\receipt.cs" />
-    <Compile Include="Assets\heatPanCounter.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
-    <Compile Include="Assets\container.cs" />
+    <Compile Include="Assets\scripts\uis\progressBar.cs" />
     <Compile Include="Assets\scripts\settings\inputControl.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\container.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\_Assets\KitchenChaos_COMPLETE_PROJECT.txt" />
