--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
     <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
+    <Compile Include="Assets\plateGen.cs" />
     <Compile Include="Assets\scripts\scriptables\receiptCnf.cs" />
     <Compile Include="Assets\scripts\interactables\processable.cs" />
     <Compile Include="Assets\scripts\interactables\counters\heatPanCounter.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Assets\scripts\scriptables\receipt.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\uis\progressBar.cs" />
+    <Compile Include="Assets\scripts\interactables\counters\plateCounter.cs" />
     <Compile Include="Assets\scripts\settings\inputControl.cs" />
     <Compile Include="Assets\scripts\interactables\counters\container.cs" />
   </ItemGroup>
