--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,13 +70,13 @@
     <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
     <Compile Include="Assets\plateGen.cs" />
-    <Compile Include="Assets\scripts\scriptables\receiptCnf.cs" />
+    <Compile Include="Assets\scripts\scriptables\processableCnf.cs" />
     <Compile Include="Assets\scripts\interactables\processable.cs" />
     <Compile Include="Assets\scripts\interactables\counters\heatPanCounter.cs" />
     <Compile Include="Assets\scripts\mgrs\input.cs" />
     <Compile Include="Assets\scripts\interactables\item.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
-    <Compile Include="Assets\scripts\scriptables\receipt.cs" />
+    <Compile Include="Assets\scripts\scriptables\itemCnf.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\uis\progressBar.cs" />
     <Compile Include="Assets\scripts\interactables\counters\plateCounter.cs" />
