--- a/.editorconfig
+++ b/.editorconfig
@@ -139,12 +139,12 @@ csharp_style_allow_embedded_statements_on_same_line_experimental = true
 #### C# 格式规则 ####
 
 # 新行首选项
-csharp_new_line_before_catch = true
-csharp_new_line_before_else = true
-csharp_new_line_before_finally = true
+csharp_new_line_before_catch = false
+csharp_new_line_before_else = false
+csharp_new_line_before_finally = false
 csharp_new_line_before_members_in_anonymous_types = true
 csharp_new_line_before_members_in_object_initializers = true
-csharp_new_line_before_open_brace = accessors,anonymous_methods,anonymous_types,control_blocks,lambdas,methods,object_collection_array_initializers,properties
+csharp_new_line_before_open_brace = none
 csharp_new_line_between_query_expression_clauses = true
 
 # 缩进首选项
