--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\scripts\interactables\plate.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
+    <Compile Include="Assets\scripts\utils\lookAtCam.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\cuttingCounter.cs" />
     <Compile Include="Assets\scripts\utils\owner.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
     <Compile Include="Assets\plateGen.cs" />
+    <Compile Include="Assets\scripts\utils\utils.cs" />
     <Compile Include="Assets\scripts\scriptables\processableCnf.cs" />
     <Compile Include="Assets\scripts\interactables\processable.cs" />
     <Compile Include="Assets\scripts\interactables\counters\heatPanCounter.cs" />
@@ -764,6 +766,9 @@
     </Reference>
     <Reference Include="Unity.Rider.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.2D.Sprite.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
