--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\interactables\counters\functionalCounter.cs" />
+    <Compile Include="Assets\scripts\scriptables\processables\processableCnf.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
     <Compile Include="Assets\scripts\interactables\plate.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
@@ -68,17 +69,16 @@
     <Compile Include="Assets\scripts\interactables\counters\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\cuttingCounter.cs" />
     <Compile Include="Assets\scripts\utils\owner.cs" />
+    <Compile Include="Assets\scripts\scriptables\dishes\dishSchema.cs" />
     <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
     <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
     <Compile Include="Assets\scripts\utils\utils.cs" />
-    <Compile Include="Assets\scripts\scriptables\processableCnf.cs" />
-    <Compile Include="Assets\scripts\interactables\processable.cs" />
     <Compile Include="Assets\scripts\interactables\counters\heatPanCounter.cs" />
     <Compile Include="Assets\scripts\mgrs\input.cs" />
     <Compile Include="Assets\scripts\interactables\item.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
-    <Compile Include="Assets\scripts\scriptables\itemCnf.cs" />
+    <Compile Include="Assets\scripts\scriptables\items\itemCnf.cs" />
     <Compile Include="Assets\scripts\interactables\counters\plateGen.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\uis\progressBar.cs" />
