--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\scripts\utils\lookAtCam.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\cuttingCounter.cs" />
+    <Compile Include="Assets\scripts\uis\waitingList.cs" />
     <Compile Include="Assets\scripts\utils\owner.cs" />
     <Compile Include="Assets\scripts\scriptables\dishes\dishSchema.cs" />
     <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
@@ -81,12 +82,11 @@
     <Compile Include="Assets\scripts\player\player.cs" />
     <Compile Include="Assets\scripts\scriptables\items\itemCnf.cs" />
     <Compile Include="Assets\scripts\interactables\counters\plateGen.cs" />
-    <Compile Include="Assets\waitingList.cs" />
+    <Compile Include="Assets\scripts\mgrs\waitingListMgr.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\uis\progressBar.cs" />
     <Compile Include="Assets\scripts\interactables\counters\plateCounter.cs" />
     <Compile Include="Assets\scripts\settings\inputControl.cs" />
-    <Compile Include="Assets\waitingListMgr.cs" />
     <Compile Include="Assets\scripts\interactables\counters\container.cs" />
   </ItemGroup>
   <ItemGroup>
