--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,10 +61,10 @@
     <Compile Include="Assets\scripts\interactables\counters\functionalCounter.cs" />
     <Compile Include="Assets\scripts\scriptables\processables\processableCnf.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
+    <Compile Include="Assets\scripts\scens\mainMenu.cs" />
     <Compile Include="Assets\scripts\scriptables\sounds\soundCnf.cs" />
     <Compile Include="Assets\scripts\interactables\plate.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
-    <Compile Include="Assets\startTimer.cs" />
     <Compile Include="Assets\scripts\interactables\counters\deliveryCounter.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
     <Compile Include="Assets\scripts\utils\lookAtCam.cs" />
@@ -78,12 +78,17 @@
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
     <Compile Include="Assets\scripts\utils\utils.cs" />
     <Compile Include="Assets\scripts\mgrs\deliveryMgr.cs" />
+    <Compile Include="Assets\scripts\uis\startTimer.cs" />
+    <Compile Include="Assets\scripts\uis\popup.cs" />
     <Compile Include="Assets\scripts\interactables\counters\heatPanCounter.cs" />
     <Compile Include="Assets\scripts\mgrs\input.cs" />
     <Compile Include="Assets\scripts\interactables\item.cs" />
     <Compile Include="Assets\scripts\player\player.cs" />
+    <Compile Include="Assets\scripts\uis\clock.cs" />
     <Compile Include="Assets\scripts\scriptables\items\itemCnf.cs" />
     <Compile Include="Assets\scripts\interactables\counters\plateGen.cs" />
+    <Compile Include="Assets\scripts\scens\helloScene.cs" />
+    <Compile Include="Assets\scripts\scens\loadingScene.cs" />
     <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\mgrs\soundMgr.cs" />
     <Compile Include="Assets\scripts\uis\progressBar.cs" />
