--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\scripts\interactables\counters\counter.cs" />
     <Compile Include="Assets\scripts\interactables\counters\deliveryCounter.cs" />
     <Compile Include="Assets\scripts\mgrs\staticResetMgr.cs" />
+    <Compile Include="Assets\scripts\net\netTransform.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
     <Compile Include="Assets\scripts\utils\utils.cs" />
@@ -79,13 +80,15 @@
     <Compile Include="Assets\scripts\scriptables\sounds\soundCnf.cs" />
     <Compile Include="Assets\scripts\interactables\plate.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
+    <Compile Include="Assets\scripts\utils\monoSingleton.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
     <Compile Include="Assets\scripts\utils\lookAtCam.cs" />
     <Compile Include="Assets\scripts\interactables\counters\cuttingCounter.cs" />
-    <Compile Include="Assets\scripts\uis\waitingList.cs" />
+    <Compile Include="Assets\NetAnimator.cs" />
     <Compile Include="Assets\scripts\utils\owner.cs" />
     <Compile Include="Assets\scripts\scriptables\dishes\dishSchema.cs" />
     <Compile Include="Assets\scripts\mgrs\gameMgr.cs" />
+    <Compile Include="Assets\scripts\uis\waitingListUI.cs" />
     <Compile Include="Assets\scripts\interactables\interactable.cs" />
     <Compile Include="Assets\scripts\mgrs\deliveryMgr.cs" />
     <Compile Include="Assets\netCnf.cs" />
@@ -95,7 +98,6 @@
     <Compile Include="Assets\scripts\interactables\counters\plateGen.cs" />
     <Compile Include="Assets\scripts\scens\helloScene.cs" />
     <Compile Include="Assets\scripts\scens\loadingScene.cs" />
-    <Compile Include="Assets\scripts\utils\MonoSingleton.cs" />
     <Compile Include="Assets\scripts\uis\progressBar.cs" />
     <Compile Include="Assets\scripts\interactables\counters\container.cs" />
   </ItemGroup>
