--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\scripts\net\netTransform.cs" />
     <Compile Include="Assets\scripts\interactables\counters\counterAnim.cs" />
     <Compile Include="Assets\scripts\interactables\counters\trashCan.cs" />
+    <Compile Include="Assets\counterAnchor.cs" />
     <Compile Include="Assets\scripts\utils\utils.cs" />
     <Compile Include="Assets\scripts\uis\startTimer.cs" />
     <Compile Include="Assets\scripts\interactables\item.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Assets\scripts\interactables\plate.cs" />
     <Compile Include="Assets\scripts\player\charAnim.cs" />
     <Compile Include="Assets\scripts\utils\monoSingleton.cs" />
+    <Compile Include="Assets\scoreFlag.cs" />
     <Compile Include="Assets\scripts\player\movement.cs" />
     <Compile Include="Assets\scripts\utils\lookAtCam.cs" />
     <Compile Include="Assets\scripts\interactables\counters\cuttingCounter.cs" />
